--- a/folder2/http_endpoints/config.json
+++ b/folder2/http_endpoints/config.json
@@ -32,5 +32,22 @@
     "sql_file": "sql/GET-v1.sql",
     "type": "sql_endpoint",
     "return_type": "json"
+  },
+  {
+    "name": "/v3",
+    "description": "",
+    "method": "GET",
+    "endpoint": "/v3",
+    "data_source": {
+      "cluster_id": 3329005
+    },
+    "params": [],
+    "settings": {
+      "timeout": 5000,
+      "row_limit": 20
+    },
+    "sql_file": "sql/GET-v3.sql",
+    "type": "sql_endpoint",
+    "return_type": "json"
   }
 ]
